--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Primary Meta Tags -->
     <title>SMP &amp; Co. Global Strategy Partners</title>
     <meta name="title" content="SMP & Co. Global Strategy Partners">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
