New branding and blog integration
* Added new logo
* Changed brand color
* Integrated Medium blog

--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
     <meta name="title" content="SMP & Co. Global Strategy Partners">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
-    <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arimo:400,700" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="intro">
-        <div class="hero">
-            <div class="hero-body">
-                <h1>Saulong<br>Manalastas<br>Patdu &amp; Co.</h1>
-                <h2>Global Strategy Partners</h2>
-            </div>
-            <div class="tabs">
-                <ul>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Our Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
+    <div class="hero">
+        <div class="level">
+            <img id="logoImg" src="SMP_sub_mono_white.svg" class="level-left">
         </div>
+        <div class="tabs">
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Our Services</a></li>
+                <li><a href="#publications">Pulications</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="intro">
         <div class="section" id="about">
             <h1>About Us</h1>
             <br>
@@ -39,30 +40,47 @@
             <br>
             <div class="columns">
                 <div class="column">
-                    <img src="https://img.icons8.com/dotty/64/21A179/money-box.png">
+                    <img src="https://img.icons8.com/dotty/64/670DDB/money-box.png">
                     <h3>Financial Logistics Structuring</h3>
                 </div>
                 <div class="column">
-                    <img src="https://img.icons8.com/dotty/64/21A179/skyscrapers.png">
+                    <img src="https://img.icons8.com/dotty/64/670DDB/skyscrapers.png">
                     <h3>SPV/SPE Advisory and Arrangement</h3>
                 </div>
                 <div class="column">
-                    <img src="https://img.icons8.com/dotty/64/21A179/conference-background-selected.png">
+                    <img src="https://img.icons8.com/dotty/64/670DDB/conference-background-selected.png">
                     <h3>Proxy/Agent Representation via Nominal Directorship</h3>
                 </div>
             </div>
             <div class="columns">
                 <div class="column">
-                    <img src="https://img.icons8.com/dotty/64/21A179/passport.png">
+                    <img src="https://img.icons8.com/dotty/64/670DDB/passport.png">
                     <h3>Intermediary Liaison Services in Global Markets</h3>
                 </div>
                 <div class="column">
-                    <img src="https://img.icons8.com/dotty/64/21A179/laptop.png">
+                    <img src="https://img.icons8.com/dotty/64/670DDB/laptop.png">
                     <h3>Technology and Innovation Strategy Planning and Advisory</h3>
                 </div>
                 <div class="column">
-                    <img src="https://img.icons8.com/dotty/64/21A179/privacy.png">
+                    <img src="https://img.icons8.com/dotty/64/670DDB/privacy.png">
                     <h3>Data Privacy Protection and Compliance Advisory</h3>
+                </div>
+            </div>
+        </div>
+        <div class="section" id="publications">
+            <div class="columns">
+                <div class="column publications is-two-fifths-desktop">
+                    <h2>Publications</h2>
+                    <h1>The SMP & Co. Strategy Review</h1>
+                    <br>
+                    <p>The official blog of Saulong Manalastas Patdu & Co. Global Strategy Partners Ltd.</p>
+                    <br>
+                    <a class="button" href="https://medium.com/the-smp-co-strategy-review" target="_blank">Read More</a>
+                </div>
+                <div class="column">
+                    <div id="medium-widget"></div>
+                    <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
+                    <script>MediumWidget.Init({renderTo: '#medium-widget', params: {"resource":"https://medium.com/the-smp-co-strategy-review","postsPerLine":3,"limit":4,"picture":"big","fields":["description","author","claps"],"ratio":"landscape"}})</script>
                 </div>
             </div>
         </div>
@@ -94,6 +112,8 @@
 <footer class="footer">
     <div class="content has-text-centered">
         <div>
+            <img src="SMP_sub.svg">
+            <br><br>
             <p>Photos, icons, and illustrations by <a href="https://icons8.com">Icons8</a></p>
             <p>Copyright 2019 SMP &amp; Co. Global Strategy Partners. All rights reserved.</p>
         </div>
