--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Our Services</a></li>
-                <li><a href="#publications">Pulications</a></li>
+                <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
